 VERSION 0.6.x
------------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.x

Updates:
- glfw:              updated to 3.3.2

Breaking Changes:
- popup keyword:     removed unused popup keyword
- set_item_popup:    removed command
- get_item_popup:    removed command

Fixes:
- textures:          fixed texture decrementing and buffer support (numpy)
- drawlist:          fixed crash from viewport drawing before starting app
- input text:        tabs(\t) can now be input #408
- drawing api:       polygon fill to draw before outline, related to #371
- collapsing header: quering open/close works now
- numpy:             list of int/float can now use numpy #105
- treenode:          changing labels no longer reset state #373
- collapsing Header: changing labels fixed
- Mac sizing:        Partially fixed. #348 #365
- Logger:            Fixed autoscroll mac bug #347
- Delete Item:       does_item_exists now looks at children delete queue

-----------------------------------------------------------------------
 VERSION 0.6.35
-----------------------------------------------------------------------

Fixes:
- plots:           fixed plot scaling issue #364
- get_item_width:  now works for non-container widgets
- get_item_height: now works for non-container widgets

-----------------------------------------------------------------------
 VERSION 0.6.34
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.34

Fixes:
- exit callback: fixed exit callback being called twice
- tooltips:      fixed tooltips in managed columns issue #360

-----------------------------------------------------------------------
 VERSION 0.6.32
-----------------------------------------------------------------------

New Commands:
- docking:   Added "enable_docking" command

Fixes:
- tables:          fixed color alignment issue